# AlcubierreEngine

./: .gitignore  LICENSE  README.md
libAlcubierre/: AlcubierreEngine.h  CMakeLists.txt  Makefile
libAlcubierre/dev/: ITemplateInterface.h  cheatsheet.cpp
libAlcubierre/dev/Allocator/: public.h
libAlcubierre/dev/Renderchain/: public.h  source.inl
libAlcubierre/dev/TemplateModule/: private.h  source.cpp
libAlcubierre/dev/objToBinary/: Makefile  main.cpp
libAlcubierre/src/: AlcubierreEngine.cpp  AlcubierreEngine.h
libAlcubierre/src/core/: AlcubierreCore.h
libAlcubierre/src/core/DataManager/: DataManager.cpp  DataManager.h  DataManager_impl.inl
libAlcubierre/src/core/DataManager/default/: enginedata.json  enginedata_json.h
libAlcubierre/src/core/DebugManager/: DebugManager.cpp  DebugManager.h  private.h  public.h  source.cpp  wrapper.h
libAlcubierre/src/core/PublicInterface/: private.h  public.h  source.cpp
libAlcubierre/src/core/Registry/: private.h  public.h  source.cpp  wrapper.h
libAlcubierre/src/core/Registry/base/: GlobalDefinitions.h  InterfaceBaseClass.h  WrapperBaseClass.h
libAlcubierre/src/core/Registry/interface/: IConfigManager.h  IDirector.h  IDiskInterface.h  IGraphicsBackend.h  IHashGenerator.h  IModelLoader.h  IShaders.h  IWindowManager.h  IWindowSurfaceBridge.h
libAlcubierre/src/module/ConfigManager/: private.h  public.h  source.cpp  wrapper.h
libAlcubierre/src/module/DataManager/: DataManager.cpp  DataManager.h
libAlcubierre/src/module/DataManager/default/: enginedata.json  enginedata_json.h
libAlcubierre/src/module/DataManager/default/data/: appdata.json  enginedata.json  userdata.json
libAlcubierre/src/module/DataManager/default/format/: appdata_json.h  enginedata_json.h  userdata_json.h
libAlcubierre/src/module/DebugManager/: DebugManager.cpp  DebugManager.h
libAlcubierre/src/module/Director/: private.h  source.cpp  source.inl
libAlcubierre/src/module/DiskInterface/: private.h  source.cpp
libAlcubierre/src/module/GLFWHandler/: GLFWHandler.cpp  GLFWHandler.h  private.h  public.h  source.cpp  wrapper.h
libAlcubierre/src/module/GLFWHandler/GLFWSurfaceBridge/: private.h  public.h  source.cpp
libAlcubierre/src/module/Hasher/: private.h  source.cpp
libAlcubierre/src/module/ResourceManager/: private.h  source.cpp
libAlcubierre/src/module/ShaderProcessor/: private.h  source.cpp
libAlcubierre/src/module/ShaderProcessor/Shaders/: fragment.slang  shadercomp.sh  vertex.slang
libAlcubierre/src/module/ShaderProcessor/Shaders/output/: fragment.h  vertex.h
libAlcubierre/src/module/VulkanHandler/: VulkanHandler.cpp  VulkanHandler.h  VulkanStructBundles.h  private.h  public.h  source.cpp
libAlcubierre/src/module/VulkanHandler/Component/: Device.h  Renderchain.h  RuntimeEnvironment.h  Swapchain.h
libAlcubierre/src/module/VulkanHandler/Component/Allocator/: public.h  source.inl
libAlcubierre/src/module/VulkanHandler/Component/Allocator/Component/: materialHandler.inl  meshHandler.inl  textureHandler.inl  transferHandler.inl
libAlcubierre/src/module/VulkanHandler/Component/Device/: public.h  source.inl
libAlcubierre/src/module/VulkanHandler/Component/Environment/: public.h  source.inl
libAlcubierre/src/module/VulkanHandler/Component/Pipelines/: public.h  source.inl
libAlcubierre/src/module/VulkanHandler/Component/Renderchain/: public.h  source.inl
libAlcubierre/src/module/VulkanHandler/Component/Swapchain/: public.h  source.inl
libAlcubierre/src/module/VulkanHandler/Shaders/: basic_shader.slang  fragment.slang  shadercomp.sh  vertex.slang
sandbox/: Makefile  leaks.supp  main.cpp  settings.json  test.json
